# ADS-Matrix_PQC

./: .gitignore  README.md  README_ANALISE_ESTATISTICA.md  README_CVS.md  README_EXPERIMENTO.md  README_JUSTIFICATIVAS_EXPERIMENTAIS.md  REFERENCIAS_ACADEMICAS_WORKLOAD.md  requirements.txt
analysis/: gerar_graficos.py  report_testes_hipoteses.txt  testes_hipoteses.py
analysis/.ipynb_checkpoints/: analise_resultados-checkpoint.ipynb
results/: resultados_normality_check_20250716_202824.csv
rust_experiment/: Cargo.toml
rust_experiment/.ipynb_checkpoints/: Cargo-checkpoint.toml
rust_experiment/src/: README_WORKLOAD.md  main.rs  saida-experimento  workload.rs
