[package]
name = "pq_crypto_matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ctr = "0.9"
rand = "0.8"
rand_core = "0.6"
x25519-dalek = "2.0"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
sysinfo = "0.29"  # ✅ compatível com SystemExt, get_current_pid
chrono = "0.4"
rayon = "1.7"